kubectl_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm7dev-ingress
  namespace: laa-claim-non-standard-magistrate-fee-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: crm7dev-ingress-laa-claim-non-standard-magistrate-fee-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - crm7dev.apps.live.cloud-platform.service.justice.gov.uk 
  rules:
  - host: crm7dev.apps.live.cloud-platform.service.justice.gov.uk 
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: laa-claim-non-standard-magistrate-fee-dev
            port:
              number: 5000
